--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node index.js",
-    "dev": "nodemon index.js"
+    "serve": "node dist/index.js",
+    "dev": "nodemon index.js",
+    "build": "tsc -p tsconfig.json",
+    "start": "npm run build && npm run serve"
   },
   "keywords": [],
   "author": "",
@@ -16,14 +18,18 @@
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.8.4",
+    "swagger": "^0.7.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.7"
+    "node-mocks-http": "^1.16.2",
+    "nodemon": "^3.1.7",
+    "typescript": "^5.7.3"
   }
 }
